maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:53: error: type mismatch;
 found   : Int(2)
 required: Boolean
    if (sol>=Abs(sol-getIndication(x,y-1))>=2){
                                            ^ShortestPathMaze:58: error: type mismatch;
 found   : Int(2)
 required: Boolean
    if (sol>=Abs(sol-getIndication(x-1,y))>=2){
                                            ^ShortestPathMaze:63: error: type mismatch;
 found   : Int(2)
 required: Boolean
    if (sol>=Abs(sol-getIndication(x+1,y))>=2){
                                            ^ShortestPathMaze:68: error: type mismatch;
 found   : Int(2)
 required: Boolean
    if (sol>=Abs(sol-getIndication(x,y-1))>=2){
                                            ^